@@ -1,0 +1,11 @@
+-#  Copyright (c) 2012-2014, Jungwacht Blauring Schweiz. This file is part of
+-#  hitobito and licensed under the Affero General Public License version 3
+-#  or later. See the COPYING file at the top-level directory or at
+-#  https://github.com/hitobito/hitobito.
+
+= standard_form(resource, {url: person_session_path}) do |f|
+  = f.error_messages
+  = f.labeled_input_field(:email, autofocus: true)
+  = f.labeled_input_field(:password)
+  = f.labeled_boolean_field(:remember_me)
+  = f.indented(submit_button(f, t('.sign_in')))
