@@ -1,3 +1,8 @@
+#  Copyright (c) 2012-2013, Jungwacht Blauring Schweiz. This file is part of
+#  hitobito and licensed under the Affero General Public License version 3
+#  or later. See the COPYING file at the top-level directory or at
+#  https://github.com/hitobito/hitobito.
+
 # == Schema Information
 #
 # Table name: custom_contents
@@ -8,14 +13,13 @@
 #  placeholders_optional :string(255)
 #
 
-#  Copyright (c) 2012-2013, Jungwacht Blauring Schweiz. This file is part of
-#  hitobito and licensed under the Affero General Public License version 3
-#  or later. See the COPYING file at the top-level directory or at
-#  https://github.com/hitobito/hitobito.
 login:
   key: login
   placeholders_required: login-url
   placeholders_optional: user
+
+login_info:
+  key: 'views/devise/sessions/info'
 
 notes:
   key: notes
